k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-backend
  template:
    metadata:
      labels:
        app: nodejs-backend
    spec:
      containers:
        - name: backend
          image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/team1/backend:13
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: nodejs-backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
spec:
  selector:
    app: nodejs-backend
  ports:
    - port: 80
      targetPort: 8080
