k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: api.jejugo.goorm.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-backend
                port:
                  number: 80
